--- a/dic/service.properties
+++ b/dic/service.properties
@@ -1,5 +1,5 @@
-#D:\Repo\dic\dicM001
-#Sun Jul 07 16:39:13 CEST 2019
+#D:\Repo\Dictionary\dicM001
+#Sun Jul 07 20:10:57 CEST 2019
 SysconglomeratesIdentifier=32
 SyscolumnsIdentifier=144
 derby.serviceLocale=en_GB
