search duplicated words working

--- a/dic/service.properties
+++ b/dic/service.properties
@@ -1,5 +1,5 @@
-#D:\Repo\Dictionary\dicM001
-#Thu Aug 15 21:34:52 CEST 2019
+#D:\Repo\IntelliJ\Dictionary\dicM001
+#Fri Aug 23 22:12:21 CEST 2019
 SysconglomeratesIdentifier=32
 SyscolumnsIdentifier=144
 derby.serviceLocale=en_GB
